--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,9 @@
-Flask==2.1.3
-pandas==1.3.5
-joblib==1.2.0
+Flask==3.0.3
+pandas==2.2.3
+joblib==1.4.2
 scikit-learn==1.5.2
-matplotlib==3.5.1
-seaborn==0.11.2
-flask-cors==3.0.10
-gunicorn>=20.0.0
+matplotlib==3.9.2
+seaborn==0.13.2
+flask-Cors==5.0.0
+gunicorn==23.0.0
 
